Fix mobile alignment

--- a/src/components/css/main.css
+++ b/src/components/css/main.css
@@ -150,30 +150,6 @@ a:active {
   width: 100%;
   grid-column: 2;
 }
-
-.scrollable-container,
-.container {
-  display: flex;
-  align-self: center;
-  justify-self: center;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 40px;
-  width: 100vw;
-  height: 100%;
-  grid-column: 2;
-  grid-row: 1/3;
-}
-.scrollable-container {
-  width: 90%;
-  margin-top: 10px;
-  justify-content: flex-start;
-  align-items: center;
-  overflow-y: scroll;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
 .scrollable-container::-webkit-scrollbar,
 .mobile-container::-webkit-scrollbar {
   display: none;
@@ -205,6 +181,28 @@ hr.rounded {
 }
 .film-numbers > * {
   margin: 0 10px;
+}
+
+.scrollable-container,
+.container {
+  display: flex;
+  align-self: center;
+  justify-self: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 40px;
+  width: 100vw;
+  height: 100%;
+}
+.scrollable-container {
+  width: 90%;
+  margin-top: 10px;
+  justify-content: flex-start;
+  align-items: center;
+  overflow-y: scroll;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 @media only screen and (min-width: 600px) {
@@ -244,6 +242,7 @@ hr.rounded {
     justify-self: center;
     width: 100%;
     margin: 0;
+    grid-column: 2;
     grid-row: 1/4;
     justify-content: center;
     align-items: center;
